--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,7 @@
 name = "blenderdp"
 compatibility_date = "2025-10-08"
 compatibility_flags = ["nodejs_compat"]
-pages_build_output_dir = "./dist"
+pages_build_output_dir = "/dist"
 
 [build]
 command = "npm run build"
