--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "check": "astro build && tsc && wrangler deploy --dry-run",
     "deploy": "wrangler deploy",
     "dev": "astro dev",
+    "cms": "npx decap-server",
     "preview": "astro build && wrangler dev"
   },
   "type": "module",
