--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -29,9 +29,9 @@ development:
 publish_mode: editorial_workflow
 
 collections:
-  - name: "portfolio"
-    label: "作品"
-    folder: "src/content/portfolio"
+  - name: "models"
+    label: "模型"
+    folder: "src/content/models"
     create: true
     fields:
       - { label: "标题", name: "title", widget: "string" }
@@ -49,6 +49,7 @@ collections:
       - { label: "标题", name: "title", widget: "string" }
       - { label: "描述", name: "description", widget: "string" }
       - { label: "缩略图", name: "thumbnail", widget: "image" }
+      - { label: "分类", name: "category", widget: "hidden", default: "软件" }
       - { label: "标签", name: "tags", widget: "string", required: false, hint: "多个标签请用逗号分隔，例如：工具,效率,开发" }
       - { label: "发布日期", name: "date", widget: "datetime" }
       - { label: "正文", name: "body", widget: "markdown" }
@@ -61,49 +62,40 @@ collections:
       - { label: "标题", name: "title", widget: "string" }
       - { label: "描述", name: "description", widget: "string" }
       - { label: "缩略图", name: "thumbnail", widget: "image" }
+      - { label: "分类", name: "category", widget: "hidden", default: "插件" }
       - { label: "标签", name: "tags", widget: "string", required: false, hint: "多个标签请用逗号分隔，例如：工具,效率,开发" }
       - { label: "发布日期", name: "date", widget: "datetime" }
       - { label: "正文", name: "body", widget: "markdown" }
 
-  - name: "warehouse-models"
-    label: "仓库 - 模型"
-    folder: "src/content/warehouse/models"
+  - name: "asset-library-textures"
+    label: "资产库 - 贴图"
+    folder: "src/content/asset-library/textures"
     create: true
     fields:
       - { label: "标题", name: "title", widget: "string" }
       - { label: "描述", name: "description", widget: "string" }
       - { label: "缩略图", name: "thumbnail", widget: "image" }
+      - { label: "分类", name: "category", widget: "hidden", default: "贴图" }
       - { label: "标签", name: "tags", widget: "string", required: false, hint: "多个标签请用逗号分隔，例如：资源,模型,插件" }
       - { label: "发布日期", name: "date", widget: "datetime" }
       - { label: "正文", name: "body", widget: "markdown" }
 
-  - name: "warehouse-textures"
-    label: "仓库 - 贴图"
-    folder: "src/content/warehouse/textures"
+  - name: "asset-library-hdris"
+    label: "资产库 - HDRIs"
+    folder: "src/content/asset-library/hdris"
     create: true
     fields:
       - { label: "标题", name: "title", widget: "string" }
       - { label: "描述", name: "description", widget: "string" }
       - { label: "缩略图", name: "thumbnail", widget: "image" }
+      - { label: "分类", name: "category", widget: "hidden", default: "HDRIs" }
       - { label: "标签", name: "tags", widget: "string", required: false, hint: "多个标签请用逗号分隔，例如：资源,模型,插件" }
       - { label: "发布日期", name: "date", widget: "datetime" }
       - { label: "正文", name: "body", widget: "markdown" }
 
-  - name: "warehouse-hdris"
-    label: "仓库 - HDRIs"
-    folder: "src/content/warehouse/hdris"
-    create: true
-    fields:
-      - { label: "标题", name: "title", widget: "string" }
-      - { label: "描述", name: "description", widget: "string" }
-      - { label: "缩略图", name: "thumbnail", widget: "image" }
-      - { label: "标签", name: "tags", widget: "string", required: false, hint: "多个标签请用逗号分隔，例如：资源,模型,插件" }
-      - { label: "发布日期", name: "date", widget: "datetime" }
-      - { label: "正文", name: "body", widget: "markdown" }
-
-  - name: "notes"
-    label: "笔记"
-    folder: "src/content/notes"
+  - name: "study-materials"
+    label: "学习资料"
+    folder: "src/content/study-materials"
     create: true
     fields:
       - { label: "标题", name: "title", widget: "string" }
