--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "publish": true
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.6",
     "@astrojs/cloudflare": "12.6.0",
     "@astrojs/mdx": "4.3.0",
     "@astrojs/rss": "4.0.11",
     "@astrojs/sitemap": "3.4.1",
     "astro": "5.10.1",
-    "typescript": "5.8.3"
+    "decap-cms": "^3.9.0",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "decap-server": "^3.4.0",
