修复 TypeScript 配置问题：更新 tsconfig.json 中的 include 配置以解决找不到 about-page.astro 文件的问题

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "noEmit": true,
     "skipLibCheck": true
   },
-  "include": ["src", "astro.config.mjs", "src/env.d.ts"],
+  "include": ["src/**/*.astro", "src/**/*.ts", "src/**/*.tsx", "astro.config.mjs", "src/env.d.ts"],
   "exclude": ["dist", "node_modules"]
 }
