--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/sitemap": "3.4.1",
     "astro": "5.10.1",
     "decap-cms": "^3.9.0",
+    "giscus": "^1.6.0",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
