--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "url": "git+https://github.com/Gautown/blenderdp.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/Gautown/blenderdp/issues"
   },
